--- a/UI/client-app/package.json
+++ b/UI/client-app/package.json
@@ -11,10 +11,11 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "axios": "^0.21.1",
-    "mobx": "^6.3.0",
-    "mobx-react-lite": "^3.2.0",
+    "mobx": "^6.3.5",
+    "mobx-react-lite": "^3.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2"
   }
 }
