--- a/UI/client-app/package.json
+++ b/UI/client-app/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^26.0.21",
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
+    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.2",
     "axios": "^0.21.1",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
     "react": "^17.0.1",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
