--- a/UI/client-app/package.json
+++ b/UI/client-app/package.json
@@ -12,10 +12,13 @@
     "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.2",
     "axios": "^0.21.1",
+    "date-fns": "^2.26.0",
+    "formik": "^2.2.9",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
     "react": "^17.0.1",
     "react-calendar": "^3.5.0",
+    "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -23,7 +26,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +54,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-datepicker": "^4.3.2",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/yup": "^0.29.13"
   }
 }
