update a bunch of stuff

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "ronde",
+    "ApiKey": "181954464399289",
+    "ApiSecret": "qR3fLeer2pGuYNbqeQHmWvm3VyE"
+  }
 }
