--- a/UI/client-app/package.json
+++ b/UI/client-app/package.json
@@ -16,12 +16,16 @@
     "formik": "^2.2.9",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
+    "photoswipe": "^5.3.0",
     "react": "^17.0.1",
     "react-calendar": "^3.5.0",
     "react-cropper": "^2.1.8",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.4.2",
+    "react-image-lightbox": "^5.1.4",
+    "react-lightbox-component": "^1.2.1",
+    "react-photoswipe-gallery": "^2.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
