--- a/UI/client-app/package.json
+++ b/UI/client-app/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.9",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
+    "moment": "^2.29.4",
     "photoswipe": "^5.3.0",
     "react": "^17.0.1",
     "react-calendar": "^3.5.0",
