--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=Ronde; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost; Database=Ronde; Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -14,5 +14,6 @@
     "CloudName": "ronde",
     "ApiKey": "181954464399289",
     "ApiSecret": "qR3fLeer2pGuYNbqeQHmWvm3VyE"
-  }
+  },
+  "TokenKey": "super secret key"
 }
