--- a/UI/client-app/package.json
+++ b/UI/client-app/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.4.2",
+    "react-helmet": "^6.1.0",
     "react-image-lightbox": "^5.1.4",
     "react-lightbox-component": "^1.2.1",
     "react-photoswipe-gallery": "^2.2.1",
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.2",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.2",
     "@types/yup": "^0.29.13"
   }
